--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
   <div class="header">
-    <div class="logo">
+  <div class="right-align">
+    <div class="logo ">
       LOGO
     </div>
-    <ul class="links">
+    <ul class="links ">
       <li><a href="google.com">link-one</a></li>
       <li><a href="google.com">link-two</a></li>
       <li><a href="google.com">link-three</a></li>
     </ul>
-    <button class="notifications">
+  </div>
+  <div class="right-align">
+    <button class="notifications ">
       1 new notification
     </button>
-    <div class="profile-image"></div>
+    <div class="profile-image right-align"></div>
+  </div>
   </div>
 </body>
 </html>
